tests/models/enum/named/u128/pass/default.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(default = 1)]
        value: u128
    },
}
fn main() {}
