tests/models/enum/named/u128/fail/alias.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(alias = 1)]
        value: u128
    },
}
fn main() {}
